[project]
name = "ai-agent-lanchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.0",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "ollama>=0.6.2",
]
